# rs-result-ext

./: CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs
