[package]
name = "philiprehberger-result-ext"
version = "0.1.6"
edition = "2021"
authors = ["Philip Rehberger"]
description = "Extension traits for Result and Option with tap, map, and error accumulation"
license = "MIT"
repository = "https://github.com/philiprehberger/rs-result-ext"
readme = "README.md"
rust-version = "1.70"
documentation = "https://docs.rs/philiprehberger-result-ext"
keywords = ["result", "option", "extension", "error-handling", "utility"]
categories = ["rust-patterns", "no-std::no-alloc"]
