[package]
name = "philiprehberger-result-ext"
version = "0.1.2"
edition = "2021"
authors = ["Philip Rehberger"]
description = "Extension traits for Result and Option with tap, map, and error accumulation"
license = "MIT"
repository = "https://github.com/philiprehberger/rs-result-ext"
keywords = ["result", "option", "extension", "error-handling", "utility"]
categories = ["rust-patterns", "no-std::no-alloc"]
